bugfix: placeholder header was showing on mobile pulldown

--- a/client/components/Header/_header.scss
+++ b/client/components/Header/_header.scss
@@ -11,6 +11,7 @@
 
 .site-header-spacer {
   position: relative;
+  opacity: 0;
 }
 
 .site-header-fixed {
